# yandex-music-pwa

./: .editorconfig  .gitignore  README.md  index.html  package-lock.json  package.json  sonar-project.properties  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
proxy/: Cargo.toml  README.md
proxy/src/: lib.rs  main.rs
public/: manifest.webmanifest
scripts/: check-version.mjs  deploy-proxy.sh  remove-token.sh  set-token.sh  show-logs.sh
src/: access-policy.test.ts  access-policy.ts  app.test.ts  app.ts  main.test.ts  main.ts  startup-theme.test.ts  styles.css
src/adapters/: api-base.ts  cache-coordinator.test.ts  cache-coordinator.ts  http-transport.test.ts  http-transport.ts  media-download.test.ts  media-download.ts  media-resolver.test.ts  media-resolver.ts  offline-store.test.ts  offline-store.ts  settings-client.test.ts  settings-client.ts  storage-capacity.test.ts  storage-capacity.ts  wikidata-transport.test.ts  wikidata-transport.ts
src/lib/: error-text.test.ts  error-text.ts  format.test.ts  format.ts  github-history.test.ts  github-history.ts  offline-preferences.test.ts  offline-preferences.ts
src/player/: audio-player.test.ts  audio-player.ts
src/sdk/: cache-policy.test.ts  cache-policy.ts  errors.ts  index.ts  recommendation-session.test.ts  recommendation-session.ts  track-links.test.ts  track-links.ts  types.ts  wikidata.test.ts  wikidata.ts  yandex-client.test.ts  yandex-client.ts
src/test/: setup.ts
