[package]
name = "yandex-music-proxy"
version = "0.4.3"
edition = "2024"
rust-version = "1.94.1"
publish = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
aes = "0.8.4"
async-stream = "0.3.6"
aws-config = { version = "1.9.0", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1.116.0", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "rustls"] }
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
base64 = "0.22.1"
bytes = "1.10.1"
ctr = "0.9.2"
futures-util = "0.3.33"
hmac = "0.12.1"
lambda_http = "=1.2.1"
md-5 = "0.10.6"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
subtle = "2.6.1"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5.4"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"
